@@ -10,6 +10,7 @@ brot2 (0.9~unreleased) oneiric; urgency=low
   * LP#783077: Add Burning Ship, Generalised Celtic, Variant and Bird of Prey
   fractals.
   * LP#883774: Turn control prefs into a first-class window.
+  * Speed up some of the palette wrangling maths.
 
  -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Wed, 02 Nov 2011 22:47:24 +1300
 
